tests/ui/traits/suggest-dereferences/multiple-1.stderr
error[E0277]: the trait bound `&mut Baz: Happy` is not satisfied
  --> $DIR/multiple-1.rs:52:9
   |
LL |     foo(&mut baz);
   |     --- ^^^^^^^^ the trait `Happy` is not implemented for `&mut Baz`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Happy` is implemented for `&mut LDM`
note: required by a bound in `foo`
  --> $DIR/multiple-1.rs:45:26
   |
LL | fn foo<T>(_: T) where T: Happy {}
   |                          ^^^^^ required by this bound in `foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
